fix issue on porfolio and project page before dark mode rewrite

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -53,7 +53,7 @@ p {
 }
 
 .language-switcher:hover {
-  background-color: teal;
+  background-color: rgb(20, 184, 166);
 }
 
 .darkCheckContainer {
