--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+body.dark {
+    --primary: #111827;
+    --text-main: red;
+  }
